--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@ page_assets: /assets/images/landpage/
         </div>
       {% endif %}
 
-      <div style="float:right;margin-bottom:2rem;">
+      <div style="height:4rem;float:right;margin-bottom:2rem;">
         <a href="{{ item.url }}" >
           <!-- {{ item.btn }}  class="btn btn--no-outline btn--medium btn--info" -->
-          <img style="height:2rem;"  src="/assets/images/landpage/button.png" />
+          <img style="height:100%;"  src="/assets/images/landpage/button.png" />
         </a>
       </div>
       <div style="clear:both;">
